--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
+
 </head>
 <body>
     <div class="container mt-5 ">
@@ -20,65 +21,63 @@
                 <h1 class="text-primary">Dibujar patrón</h1>
                 <div class="row border p-3 d-flex flex-column align-items-center justify-content-center">
                     <div class="col-12 d-flex flex-row mb-2">
-                        {% if y11==0 %}
-                        <a class="cuadro border mx-1"></a>
-                        {% else %}
-                        <div class="bg-primary cuadro2 border mx-1"></div>
-                        {% endif %}
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
                     </div>
                     <div class="col-12 d-flex flex-row mb-2">
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
                     </div>
                     <div class="col-12 d-flex flex-row mb-2">
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
                     </div>
                     <div class="col-12 d-flex flex-row mb-2">
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
                     </div>
                     <div class="col-12 d-flex flex-row mb-2">
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
                     </div>
                     <div class="col-12 d-flex flex-row mb-2">
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
                     </div>
                     <div class="col-12 d-flex flex-row mb-2">
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
-                        <div class="cuadro border mx-1"></div>
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
+                        <input type="checkbox" class="boton m-1 cuadro form-check-input">
                     </div>
                 </div>
-                <button type="button" class="my-2 btn btn-primary">Comprobar</button>
+                <button id="botoncomprobar" type="button" class="my-2 btn btn-primary">Comprobar</button>
+                <input text="hidden" class="d-none" id="valorpatron">
             </div>
             <div class="col-6 d-flex flex-column align-items-center justify-content-center">
                 <h1 class="text-primary">El número es: </h1>
             </div>
         </div>
     </div>
+    <script src="{{ url_for('static', filename='js/main.js')}}"></script>
 </body>
 </html>
