ya envia datos :v

--- a/templates/home.html
+++ b/templates/home.html
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <form action="/enviar" method="POST">
-                    <input text="hidden" name="datos" class="" id="valorpatron">
+                    <input text="hidden" name="datos" class="d-none" id="valorpatron">
                     <input value="Enviar" id="botoncomprobar" type="submit" class="my-2 btn btn-primary"></input>
                 </form>
             </div>
