--- a/templates/home.html
+++ b/templates/home.html
@@ -77,9 +77,7 @@
             </div>
             <div class="col-6 d-flex flex-column align-items-center justify-content-center">
                 <h1 class="text-primary">El número es: {{ datos }}</h1>
-                <form action="/clear" method="POST">
-                    <input value="Limpiar" type="submit" class="my-2 btn btn-primary"></input>
-                </form>
+                <h1 class="text-primary">{{ salida }}</h1>
             </div>
         </div>
     </div>
