--- a/templates/home.html
+++ b/templates/home.html
@@ -77,7 +77,38 @@
             </div>
             <div class="col-6 d-flex flex-column align-items-center justify-content-center">
                 <h1 class="text-primary">El número es: {{ datos }}</h1>
-                <h1 class="text-primary">{{ salida }}</h1>
+                <div class="d-flex flex-row align-items-center justify-content-betwen">
+                    {% if datos == 1 %}
+                    <img class="imagen" src="https://img.freepik.com/vector-gratis/lindo-bebe-elefante-juega-dibujos-animados-color-agua-mariposa-dibujado-mano_48382-175.jpg?size=338&ext=jpg" alt="">
+                    {% endif %}
+                    {% if datos == 2 %}
+                    <img class="imagen" src="https://thumbs.dreamstime.com/b/dos-galletas-20442830.jpg" alt="">
+                    {% endif %}
+                    {% if datos == 3 %}
+                    <img class="imagen" src="https://blog.frescoydelmar.com/wp-content/uploads/2018/01/Salmonetes-3.jpg" alt="">
+                    {% endif %}
+                    {% if datos == 4 %}
+                    <img class="imagen" src="http://4.bp.blogspot.com/---ojpFZ_pkg/USV6bweYxoI/AAAAAAAAARw/GWz8uYNM43w/s1600/fotostiernas..jpg" alt="">
+                    {% endif %}
+                    {% if datos == 5 %}
+                    <img class="imagen" src="https://educacionlibreencasa.files.wordpress.com/2020/01/manzanas-rojas-de-la-acuarela-en-una-rama-c3a1rbol-fije-ejemplo-fruta-dulce-un-fondo-blanco-dibujo-aislado-142443057-1.jpg?w=530" alt="">
+                    {% endif %}
+                    {% if datos == 6 %}
+                    <img class="imagen" src="https://2.bp.blogspot.com/-g_rpUNpK9aE/VuBNgz6OE5I/AAAAAAAAABQ/PEkjaXgM-Vs/s640/crecimientoninos2.jpg" alt="">
+                    {% endif %}
+                    {% if datos == 7 %}
+                    <img class="imagen" src="https://lh3.googleusercontent.com/proxy/vk7d4Ib2dNtKzenPQZ1uwC2xcVdE6WAUHqGZ7AFIaPobJN_Kc-7a2pPZ3icrHto53Yv1sRv2RLe5MZKGGASYXwPuMWRJf0ElXyy_oZPaqkPs4bfL0NuKWlBWD9ihe33r94lNG60" alt="">
+                    {% endif %}
+                    {% if datos == 8 %}
+                    <img class="imagen" src="https://i.pinimg.com/originals/39/02/c6/3902c67b3a13d3dd3ddbf1c01cdb88c2.jpg" alt="">
+                    {% endif %}
+                    {% if datos == 9 %}
+                    <img class="imagen" src="https://illustoon.com/photo/3299.png" alt="">
+                    {% endif %}
+                    {% if datos == 0 %}
+                    <img class="imagen" src="https://i.pinimg.com/474x/9e/4d/df/9e4ddf786898a97c56a867ff86e0bbd9.jpg" alt="">
+                    {% endif %}
+                </div>
             </div>
         </div>
     </div>
