--- a/templates/home.html
+++ b/templates/home.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <div class="container mt-5 ">
-        <h1 class="text-success text-center fw-bold">RECONOCIMIENTO DE NUMEROS</h1>
+        <h1 class="titulo text-center fw-bold">RECONOCIMIENTO DE NUMEROS</h1>
     </div>
-    <div class="container border shadow mt-5">
+    <div class="main container border shadow mt-5">
         <div class="row p-5">
             <div class="col-6 d-flex flex-column align-items-center justify-content-center">
                 <h1 class="text-primary">Dibujar patrón</h1>
@@ -85,7 +85,7 @@
                     <img class="imagen" src="https://thumbs.dreamstime.com/b/dos-galletas-20442830.jpg" alt="">
                     {% endif %}
                     {% if datos == 3 %}
-                    <img class="imagen" src="https://blog.frescoydelmar.com/wp-content/uploads/2018/01/Salmonetes-3.jpg" alt="">
+                    <img class="imagen" src="https://image.freepik.com/vector-gratis/dibujos-animados-pato-feliz_50699-26.jpg" alt="">
                     {% endif %}
                     {% if datos == 4 %}
                     <img class="imagen" src="http://4.bp.blogspot.com/---ojpFZ_pkg/USV6bweYxoI/AAAAAAAAARw/GWz8uYNM43w/s1600/fotostiernas..jpg" alt="">
